added film validation